--- a/style.css
+++ b/style.css
@@ -52,3 +52,18 @@ body {
 /* .menu{
     
 } */
+
+.mid_section{
+    padding: 40px;
+}
+
+.fa-search{
+    /* font-weight: 700; */
+    color: rgb(110, 110, 110);
+}
+
+.p_image{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
