--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     margin: 0px;
     padding: 0px;
     font-family: 'Inter', sans-serif;
+    font-size: 16px;
 }
 
 .main {
@@ -39,9 +40,10 @@ body {
 .sidebar {
     flex: 20%;
     padding: 30px 20px 30px;
+    background-color: white;
 }
 
-.logo{
+.logo {
     width: 50px;
 }
 
@@ -55,71 +57,197 @@ body {
     
 } */
 
-.fa-search{
-    /* font-weight: 700; */
+.fa-search {
     color: rgb(110, 110, 110);
 }
 
-.p_image{
+.p_image {
     width: 30px;
     height: 30px;
     border-radius: 50%;
 }
 
-.location_block{
+.location_block {
     display: flex;
     gap: 20px;
-    /* justify-content: stretch; */
 }
 
-.locations{
+.locations {
     flex: 25%;
     height: 200px;
     border-radius: 30px;
     position: relative;
 }
 
-#l1{
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url("./assets/images/beach.png");
+#l1 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("./assets/images/beach.png");
     background-size: cover;
     background-position: center;
 }
 
-#l2{
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url("./assets/images/desert.png");
+#l2 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("./assets/images/desert.png");
     background-size: cover;
     background-position: center;
 }
 
-#l3{
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url("./assets/images/mountain.png");
+#l3 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("./assets/images/mountain.png");
     background-size: cover;
     background-position: center;
 }
 
-#l4{
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url("./assets/images/lake.png");
+#l4 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("./assets/images/lake.png");
     background-size: cover;
     background-position: center;
 }
 
-.location_context{
+.location_context {
     position: absolute;
     bottom: 0px;
     padding: 20px;
 }
 
-.hotel_img{
+.hotel_img {
     width: 70px;
-    height: 70px;
+    /* height: 70px; */
 }
 
-.hotel_order{
+.hotel_order {
     width: 50px;
     height: 50px;
 }
 
-.book_btn{
+.book_btn {
     background-color: var(--color-salmon);
     color: white;
+}
+
+.bars {
+    width: 35px;
+    height: 5px;
+    background-color: rgb(182, 179, 179);
+    margin-top: 5px;
+    transition: all 0.5s ease;
+}
+
+.change .bar1 {
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar3 {
+    transform: rotate(45deg) translate(-8px, -8px);
+}
+
+.change .bar2 {
+    opacity: 0;
+}
+
+@media (max-width: 1080px){
+    .header {
+        flex: 5%;
+        background-color: var(--color-salmon);
+        /* display: flex;
+        flex-direction: column; */
+    }
+    
+    .mid_section {
+        flex: 60%;
+        background-color: var(--color-light-salmon);
+        padding: 40px;
+    }
+    
+    .sidebar {
+        flex: 30%;
+        padding: 30px 20px 30px;
+        background-color: white;
+    }
+    .location_block{
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+    .locations{
+        flex: 40%;
+    }
+    .hotel_block{
+        flex-wrap: wrap;
+    }
+    .hotels{
+        width: 48%;
+    }
+    .hotel_img {
+        width: 100px;
+        /* height: 70px; */
+    }
+}
+
+@media (max-width: 920px) {
+    .main {
+        display: block;
+    }
+    .header {
+        /* flex: 100%; */
+        background-color: var(--color-salmon);
+        height: 100vh;
+        width: 100%;
+        display: none;
+        /* display: flex;
+        flex-direction: column; */
+        transition: 0.5s ease;
+    }
+    .mid_section {
+        flex: 70%;
+        background-color: var(--color-light-salmon);
+        padding: 80px 40px 40px 40px;
+    }
+    .sidebar {
+        position: absolute;
+        top: 0px;
+        z-index: 1;
+        width: 100%;
+        height: 100vh;
+        display: none;
+    }
+    .sidebarshow{
+        display: block;
+    }
+    .user_tag {
+        margin-top: 10px;
+    }
+    .p_image {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+    }
+    .top_block {
+        flex-direction: column;
+    }
+    .main_nav{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 35px;
+        color: var(--color-light-black);
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        z-index: 2;
+    }
+    .nav_img{
+        width: 0px;
+    }
+    .hotels{
+        width: 100%;
+    }
+}
+
+@media (max-width: 600px){
+    .location_block {
+        gap: 20px;
+        flex-wrap: wrap;
+    }
+    .locations {
+        flex: 100%;
+    }
 }
